--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/company
+spring.datasource.url=jdbc:mysql://localhost:3306/second_dress?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=dontforget
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.task.scheduling.pool.size=5
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+server.port=8080
